# gba-sprite-engine

./: .gitignore  CMakeLists.txt  Direction.h  Functionele beschrijving.txt  LICENSE  README.md  READMEold.md  StartScene.cpp  StartScene.h  background.cpp  background.h  levelSound.h  linkAnimation.h  linkDownWalk.h  linkUpWalk.h  linkWalkSide.h  main.cpp  schema uitleg.txt  sign.h  timespan.csv  timespan_Mathias.csv  timespan_Remy.csv  timespent.csv  timespentDominique.csv  timespentJoost.csv  timespentLVanspauwen.csv  timespentWMartens.csv  timespent_Jonas_Lommelen.csv  timespent_Lloyd_Liberloo.csv  timespent_musa.csv  timespent_ruben.csv
Apple_A_Day/: CMakeLists.txt
Apple_A_Day/src/: CityScene.cpp  CityScene.h  Direction.h  StartScene.cpp  StartScene.h  apple.h  background1.cpp  background1.h  background2.cpp  background2.h  enemy.h  levelControl.h  levelSound.h  linkAnimation.h  linkUpWalk.h  main.cpp  mapMatrix.h  shared.h  sharedPalette.h  sign.h  type.cpp  type.h  windowBullet.h
GBA_Game/: CMakeLists.txt  GBA Domein Model.txt  Read Me.txt
GBA_Game/image/: BG_Map1.h  Emily_walking.c
GBA_Game/img/: BG_Level1Scene.h  BG_Level2Scene.h  Coin_rotation01.c
GBA_Game/src/: BG_data.h  BGdata_Level1Scene.h  BGdata_Level2Scene.h  Bg.h  Bg_edited_tileset.h  Coin.h  DeadScene.cpp  DeadScene.h  EndScene.cpp  EndScene.h  Level1Scene.cpp  Level1Scene.h  Level2Scene.cpp  Level2Scene.h  Main.cpp  MapData.h  MapData_L1.h  MapData_L2.h  MetaData.h  Player.h  SharedData.h  Sprite.h  StartScene.cpp  StartScene.h  background.h
GBA_game/: CMakeLists.txt
GBA_game/src/: Sonic_sprites.h  StartScene.cpp  background.h  background_level1.h  backgroundtest.h  boss.cpp  boss.h  game_play_scene.cpp  game_play_scene.h  linkAnimation.h  linkDownWalk.h  linkWalkSide.h  main.cpp  mapMatrix.h  player.cpp  player.h  scene_level1.cpp  scene_level1.h  scene_level2.cpp  scene_level2.h  sign.h  start_scene.cpp  start_scene.h
NoHeroesHere/: CMakeLists.txt
NoHeroesHere/src/: BetterScene.cpp  BetterScene.h  Enemy.h  background.h  castleworker.h  dead.h  main.cpp  pats.h
Project/: CMakeLists.txt  README.md  timespent.csv
Project/sounds/: dead_sound.raw  mono_wii_song.raw
Project/src/: Death_scene.cpp  Death_scene.h  Kirby.h  Kirby_title.h  Space_Kirby_scene.cpp  Space_Kirby_scene.h  Space_kirby_sprites.h  SplashBackground.h  SplashScreen.cpp  SplashScreen.h  background.h  background_image.h  deadSound.h  dead_sound.h  death_scene.cpp  death_scene.h  enemy.h  game_scene.cpp  game_scene.h  ground.cpp  ground.h  groundbackground.h  level.cpp  level.h  main.cpp  platform.h  press_start.h  space_Kirby_game_scene.cpp  space_Kirby_game_scene.h  space_kirby_game_palette.h  space_kirby_game_sprites.h  space_ship.cpp  space_ship.h  space_title.h  spaceship.h  splash_background_test.h  splash_sprites.h  start_scene.cpp  start_scene.h  start_screen.cpp  (+4 more)
SuperLuigi/: CMakeLists.txt  level1.cpp  level1.h  main.cpp
SuperLuigi/src/: Koopa.cpp  Koopa.h  KoopaTiles.h  Luigi.cpp  Luigi.h  LuigiTiles.h  QuestionBlock.cpp  QuestionBlock.h  QuestionBlockTiles.h  background.h  bowser.cpp  bowser.h  bowserTiles.h  end_scene.cpp  end_scene.h  goomba.cpp  goomba.h  goombaTiles.h  level1.cpp  level1.h  main.cpp  music.h  sharedPal.h  start_scene.cpp  start_scene.h
bomberboy/: CMakeLists.txt
bomberboy/img/: blauw_boven.h  blauw_dood.h  blauw_links.h  blauw_onder.h  blauw_rechts.h  bom.c  bom.h  explosie.h  grond.h  item_bomb.h  item_flame.h  item_goldenflame.h  item_kicker.h  item_life.h  item_none.h  item_random.h  item_safe.h  item_shifter.h  item_speedup.h  krat.h  kruit.h  muur.h  portaal_1.h  portaal_2.h  rood_boven.h  rood_dood.h  rood_links.h  rood_onder.h  rood_rechts.h
bomberboy/sprites/: blauw_boven.h  blauw_dood.h  blauw_links.h  blauw_onder.h  blauw_rechts.h  bom.c  bom.h  item_bomb.h  item_flame.c  item_flame.h  item_goldenflame.h  item_kicker.h  item_life.h  item_none.h  item_random.h  item_safe.h  item_shifter.h  item_speedup.h  krat.h  kruit.h  muur.h  portaal_1.h  portaal_2.h  rood_boven.h  rood_dood.h  rood_links.h  rood_onder.h  rood_rechts.h  shared.h
bomberboy/src/: end_scene.cpp  game_scene.cpp  game_scene.h  main.cpp  start_scene.cpp  start_scene.h  test_scene.cpp  test_scene.h  thing.h
demos/demo4-project-Aydogan/: CMakeLists.txt
flappyBird/: CMakeLists.txt
flappyBird/src/: MainScene.cpp  MainScene.h  StartScene.cpp  StartScene.h  achtergrondWolkjes.h  bird1.h  birdstartscherm.h  flappybird.h  flappybirdachtergrond.h  main.cpp  startschermachtergrondFB.h
game/: CMakeLists.txt  README.md  game.cbp  game.elf  game.gba  game.ss1  game.ss2
game/src/: Adventurer.cpp  Adventurer.h  Background_1.h  BattleScene_EyeMonster.cpp  BattleScene_EyeMonster.h  BattleScene_Ghost.cpp  BattleScene_Ghost.h  Chalice.cpp  Chalice.h  DeathScene.cpp  DeathScene.h  EyeballMonster.cpp  EyeballMonster.h  Ghost.cpp  Ghost.h  Scene_2.h  Sprites_Palette.h  StartScene.cpp  StartScene.h  Victory.cpp  Victory.h  Victory_Scene.cpp  Victory_Scene.h  main.cpp  skeleton_sprite.h  victory_data.h
mygame/: CMakeLists.txt
mygame/images/: background.c  ghost.c  ghost_idle.c  laser.c  shared.c  ship.c
mygame/src/: ghost.cpp  ghost.h  jetjoy_dead_scene.cpp  jetjoy_dead_scene.h  jetjoy_game_scene.cpp  jetjoy_game_scene.h  jetjoy_start_scene.cpp  jetjoy_start_scene.h  laser.cpp  laser.h  main.cpp  ship.cpp  ship.h  y_dead.h  y_pats.h  y_soundstart.h  z_background.h  z_foreground.h  z_ghost.h  z_ghost_idle.h  z_laser.h  z_sharedpal.h  z_ship.h
no-name-party/: CMakeLists.txt
no-name-party/img/: howto.txt
no-name-party/sound/: sound.h
no-name-party/sprites/: arrow_all.h  arrow_down.h  arrow_left.h  arrow_right.h  arrow_up.h  balloon_all.h  balloon_blue.h  balloon_green.h  balloon_pink.h  balloon_yellow.h  blauw_dood.h  blauw_onder.h  blauw_rechts.h  car_all.h  car_animation.h  cloud_left.h  cloud_right.h  dice_blue.h  dice_green.h  game_result.h  item_kicker.h  item_none.h  item_safe.h  krat.h  loading_star.h  luigi_car.h  luigi_down.h  luigi_game.h  luigi_up.h  (+33 more)
portal_2.5/: CMakeLists.txt
testgame/: CMakeLists.txt
(+592 files in other folders)
